# RuGet

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  rudu-linux  rudu-mac
.github/workflows/: benchmark.yml  rust-clippy.yml
benches/: download.rs
docs/: errors.md  retry.md  troubleshooting.md
lang/: en.toml
src/: cli.rs  config.rs  cookie.rs  download.rs  error.rs  fast_download.rs  file_utils.rs  http.rs  init.rs  lazy_config.rs  lib.rs  main.rs  minimal_http.rs  multithreaded_download.rs  native_http.rs  output.rs  retry.rs  simd_ops.rs  ultimate_fast.rs  ultra_fast.rs
test_data/: final_test_cookies.txt  test_cookies.txt  test_netrc  test_netrc_functionality.rs
tests/: backward_compatibility_test.rs  config_integration_tests.rs  error_presentation_test.rs  error_system_integration.rs  integration.rs  resume_retry.rs  retry_tests.rs
