[package]
name = "ruget"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
tokio = { version = "1.45", features = ["full"] }
regex = "1.11.1"
rayon = "1.10"
netrc = "0.4.1"
base64 = "0.22.1"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
criterion = "0.5"
httpmock = "0.7"
tempfile = "3"