[package]
name = "ruget"
version = "0.2.0"
edition = "2024"

[[bin]]
name = "ruget"
path = "src/main.rs"

[lib]
name = "ruget"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "cookies", "json"] }
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
tokio = { version = "1.45", features = ["full"] }
regex = "1.11.1"
rayon = "1.10"
netrc = "0.4.1"
base64 = "0.22.1"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
rand = "0.8"
anyhow = { version = "1.0", optional = true }

[features]
context = ["anyhow"]

[dev-dependencies]
criterion = "0.5"
httpmock = "0.7"
wiremock = "0.6"
tempfile = "3"
tokio-test = "0.4"
